--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,9 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: ticket_system_production
+  pool: 5
+  username: postgres
+  password: postgres
